@@ -7596,6 +7596,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\persist\splitter.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\splitter.h"
 				>
 			</File>
